@@ -36,7 +36,6 @@ import cascading.tuple.TupleEntryCollector;
 import cascading.tuple.TupleEntryIterator;
 import cascading.tuple.TupleEntrySchemeCollector;
 import cascading.tuple.TupleEntrySchemeIterator;
-import cascading.util.Util;
 
 /**
  * Class FileTap is a {@link Tap} sub-class that allows for direct local file access.
@@ -83,18 +82,18 @@ public class FileTap extends Tap<Properties, InputStream, OutputStream>
   public TupleEntryIterator openForRead( FlowProcess<Properties> flowProcess, InputStream input ) throws IOException
     {
     if( input == null )
-      input = new FileInputStream( path );
+      input = new FileInputStream( getIdentifier() );
 
-    return new TupleEntrySchemeIterator<Properties, InputStream>( flowProcess, getScheme(), input, path );
+    return new TupleEntrySchemeIterator<Properties, InputStream>( flowProcess, getScheme(), input, getIdentifier() );
     }
 
   @Override
   public TupleEntryCollector openForWrite( FlowProcess<Properties> flowProcess, OutputStream output ) throws IOException
     {
     if( output == null )
-      output = new TapFileOutputStream( path, isUpdate() ); // append if we are in update mode
+      output = new TapFileOutputStream( getIdentifier(), isUpdate() ); // append if we are in update mode
 
-    return new TupleEntrySchemeCollector<Properties, OutputStream>( flowProcess, getScheme(), output, path );
+    return new TupleEntrySchemeCollector<Properties, OutputStream>( flowProcess, getScheme(), output, getIdentifier() );
     }
 
   /**
@@ -106,7 +105,7 @@ public class FileTap extends Tap<Properties, InputStream, OutputStream>
    */
   public long getSize( Properties conf ) throws IOException
     {
-    File file = new File( path );
+    File file = new File( getIdentifier() );
 
     if( file.isDirectory() )
       return 0;
@@ -117,7 +116,7 @@ public class FileTap extends Tap<Properties, InputStream, OutputStream>
   @Override
   public boolean createResource( Properties conf ) throws IOException
     {
-    File parentFile = new File( path ).getParentFile();
+    File parentFile = new File( getIdentifier() ).getParentFile();
 
     return parentFile.exists() || parentFile.mkdirs();
     }
@@ -125,7 +124,7 @@ public class FileTap extends Tap<Properties, InputStream, OutputStream>
   @Override
   public boolean deleteResource( Properties conf ) throws IOException
     {
-    return new File( path ).delete();
+    return new File( getIdentifier() ).delete();
     }
 
   @Override
@@ -137,21 +136,12 @@ public class FileTap extends Tap<Properties, InputStream, OutputStream>
   @Override
   public boolean resourceExists( Properties conf ) throws IOException
     {
-    return new File( path ).exists();
+    return new File( getIdentifier() ).exists();
     }
 
   @Override
   public long getModifiedTime( Properties conf ) throws IOException
     {
-    return new File( path ).lastModified();
-    }
-
-  @Override
-  public String toString()
-    {
-    if( path != null )
-      return getClass().getSimpleName() + "[\"" + getScheme() + "\"]" + "[\"" + Util.sanitizeUrl( path ) + "\"]"; // sanitize
-    else
-      return getClass().getSimpleName() + "[\"" + getScheme() + "\"]" + "[not initialized]";
+    return new File( getIdentifier() ).lastModified();
     }
   }
